--- a/taskaholic/appsettings.json
+++ b/taskaholic/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"UserDatabaseSettings": {
+		"UsersCollectionName": "Users",
+		"ConnectionString": "mongodb://testeapi:testeapi1@ds117773.mlab.com:17773/rpgproject?retryWrites=false",
+		"DatabaseName": "rpgproject"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*"
 }
