- Create a autentication Module.

--- a/taskaholic/appsettings.json
+++ b/taskaholic/appsettings.json
@@ -1,4 +1,7 @@
 {
+	"AppSetings": {
+		"Token" :  "supersetsoberbyertu"
+	},
 	"UserDatabaseSettings": {
 		"UsersCollectionName": "Users",
 		"ConnectionString": "mongodb://testeapi:testeapi1@ds117773.mlab.com:17773/rpgproject?retryWrites=false",
