--- a/taskaholic/appsettings.json
+++ b/taskaholic/appsettings.json
@@ -4,8 +4,8 @@
 	},
 	"UserDatabaseSettings": {
 		"UsersCollectionName": "Users",
-		"ConnectionString": "mongodb://testeapi:testeapi1@ds117773.mlab.com:17773/rpgproject?retryWrites=false",
-		"DatabaseName": "rpgproject"
+		"ConnectionString": "mongodb://testeapi:testeapi1@ds033459.mlab.com:33459/desafioimpacta?retryWrites=false",
+		"DatabaseName": "desafioimpacta"
 	},
 	"Logging": {
 		"LogLevel": {
